[gd_scene load_steps=14 format=3 uid="uid://30jb4kc5kf5p"]

[ext_resource type="PackedScene" uid="uid://de53ukdqyusan" path="res://background/map.tscn" id="1_4c57u"]
[ext_resource type="Script" uid="uid://dub40gsfdwrnh" path="res://game_board/game_board.gd" id="2_efxa6"]
[ext_resource type="Resource" uid="uid://c8tcbxa147k28" path="res://game_board/grid.tres" id="3_dg77c"]
[ext_resource type="PackedScene" uid="uid://n825j345khoi" path="res://unit_overlay/unit_overlay.tscn" id="4_ycdy4"]
[ext_resource type="PackedScene" uid="uid://dxyfefsgkgc4l" path="res://game_board/unit_path.tscn" id="5_w48qg"]
[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://game_board/cursor/cursor.tscn" id="6_vivmo"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://units/unit.tscn" id="7_2cqfq"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://units/bear.png" id="8_yaehf"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://units/bugcat.png" id="9_074og"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://units/squirrel.png" id="10_cegan"]

[sub_resource type="Curve2D" id="Curve2D_4c57u"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_efxa6"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_dg77c"]
resource_local_to_scene = true

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource("1_4c57u")]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2_efxa6")
grid = ExtResource("3_dg77c")

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("4_ycdy4")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("5_w48qg")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("6_vivmo")]

[node name="Bear" parent="GameBoard" instance=ExtResource("7_2cqfq")]
position = Vector2(600, 480)
curve = SubResource("Curve2D_4c57u")
move_range = 3
skin = ExtResource("8_yaehf")
skin_offset = Vector2(2, 9)

[node name="Cat" parent="GameBoard" instance=ExtResource("7_2cqfq")]
position = Vector2(850.293, 412.465)
curve = SubResource("Curve2D_efxa6")
move_range = 8
skin = ExtResource("9_074og")
skin_offset = Vector2(5, 12)

[node name="Squirrel" parent="GameBoard" instance=ExtResource("7_2cqfq")]
position = Vector2(355.298, 298.556)
curve = SubResource("Curve2D_dg77c")
move_range = 5
skin = ExtResource("10_cegan")
skin_offset = Vector2(6, 17)

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
